syntax = "proto3";

import "google/protobuf/wrappers.proto";

//import "ordermessage.proto";

package ecommerce;

service OrderManagement {
    rpc addOrder(Order) returns (google.protobuf.StringValue);
    rpc getOrder(google.protobuf.StringValue) returns (Order);
    rpc searchOrders(google.protobuf.StringValue) returns (stream Order);
    rpc updateOrders(stream Order) returns (google.protobuf.StringValue);
    rpc processOrders(stream google.protobuf.StringValue) returns (stream CombinedShipment);
}

service MyOrderManagement {
    rpc CreateOrder (OrderRequest) returns (stream OrderResponse);
}

message Order {
    string id = 1;
    repeated string items = 2;
    string description = 3;
    float price = 4;
    string destination = 5;
}

message CombinedShipment {
    string id = 1;
    string status = 2;
    repeated Order ordersList = 3;
}

message OrderRequest {
  string orderId= 1;
  float price= 2; 
}

message OrderResponse {
	string Body=1;
	bool Success=2;
}

